# swagger/swagger.json
@@ -670,6 +670,48 @@
           "recommendations"
         ]
       }
+    },
+    "/api/friend-requests/send": {
+      "post": {
+        "operationId": "FriendRequestsController_sendFriendRequest",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Send a friend request"
+          }
+        },
+        "tags": [
+          "friend-requests"
+        ]
+      }
+    },
+    "/api/friend-requests/list": {
+      "get": {
+        "operationId": "FriendRequestsController_listFriendRequests",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "List all friend requests"
+          }
+        },
+        "tags": [
+          "friend-requests"
+        ]
+      }
+    },
+    "/api/friend-requests/decide/{id}": {
+      "put": {
+        "operationId": "FriendRequestsController_decideFriendRequest",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Accept/decline a friend request"
+          }
+        },
+        "tags": [
+          "friend-requests"
+        ]
+      }
     }
   },
   "info": {
